Smart contact manager